# aigc

./: .gitignore  .markdownlint-cli2.yaml  ARCHITECTURAL_INVARIANTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  PROJECT.md  README.md  RELEASE_GATES.md  SECURITY.md  app.html  doc_parity_manifest.yaml  implementation_plan.md  implementation_status.md  index.html  pyproject.toml  requirements.txt
.github/: pull_request_template.md
aigc/: __init__.py  __main__.py  audit.py  audit_chain.py  builder.py  cli.py  decorators.py  enforcement.py  errors.py  gates.py  lineage.py  policy_loader.py  policy_testing.py  presets.py  provenance_gate.py  retry.py  risk_history.py  risk_scoring.py  session.py  signing.py  sinks.py  telemetry.py  validator.py  workflow_export.py  workflow_trace.py
assets/: app-BIJH3swb.css  app-Bb7sMFsY.js  index--LyWfzGh.js  index-59iQ_IOU.css  index-990R0m0K.js  index-BDmUY-F6.js  index-BUU1lDX-.css  index-BV_BZnBf.css  index-BtZwptOM.css  index-C2yVzXrm.js  index-C3NIe2tv.js  index-CJEBOjRh.js  index-CYY9BPw4.js  index-CcaE9Y1F.js  index-D5aUyA5_.js  index-DB7_EQTD.js  index-DCskX2H7.css  index-DJQBQoKS.css  index-DVXvBo0_.js  index-DYxbtPzb.js  index-Dlr4PLUe.js  index-GtoAxUyB.js  index-Ig5L4eIj.js  index-IkQSohEh.js  index-h05diy7G.js  index-j6n1MY1a.css  index-sEeHNlm_.css
demo-app/: README.md  project.md  requirements.txt
demo-app-api/: conftest.py  gates.py  loaders.py  main.py  render.yaml  requirements.txt  scenarios.py  workflow_routes.py
demo-app-react/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
demo-app-streamlit/: README.md  app.py  project.md
docs/: AIGC_FRAMEWORK.md  GOLDEN_REPLAYS_CHECKLIST.md  GOLDEN_REPLAYS_CI_GUIDE.md  GOLDEN_REPLAYS_README.md  GOLDEN_TRACES_CI_GUIDE.md  GOLDEN_TRACES_README.md  GOLDEN_TRACE_CHECKLIST.md  INTEGRATION_GUIDE.md  PUBLIC_INTEGRATION_CONTRACT.md  USAGE.md  migration.md
policies/: base_policy.yaml  base_policy_composable.yaml  policy_dsl_spec.md
schemas/: audit_artifact.schema.json  invocation_policy.schema.json  policy_dsl.schema.json
scripts/: check_doc_parity.py  generate_golden_replays.py  generate_golden_traces.py  validate_v090_beta_proof.py
src/: __init__.py  audit.py  conditions.py  decorators.py  enforcement.py  errors.py  guards.py  policy_loader.py  retry.py  sinks.py  tools.py  validator.py
tests/: test_adversarial_preconditions.py  test_approval_checkpoints.py  test_async_enforcement.py  test_audit_artifact_contract.py  test_audit_artifact_split_metadata.py  test_audit_chain.py  test_audit_lineage.py  test_audit_sinks.py  (+97 more)
(+317 files in other folders)
