[build-system]
# Keep build deps minimal; editable installs do not require an explicit wheel
# dependency and restricted environments should use --no-build-isolation.
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aigc"
version = "0.1.1"
description = "Deterministic governance enforcement SDK for AI invocations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AIGC Contributors" }]
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "flake8>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["aigc", "aigc.*", "src", "src.*"]
