[build-system]
# Keep build deps minimal; editable installs do not require an explicit wheel
# dependency and restricted environments should use --no-build-isolation.
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aigc"
version = "0.1.2"
description = "Deterministic, fail-closed governance enforcement for AI model invocations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Neal Adams", email = "neal@nealsolves.com" }]
keywords = [
  "governance",
  "audit",
  "ai",
  "enforcement",
  "deterministic",
  "policy",
  "llm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/nealsolves/aigc"
Repository = "https://github.com/nealsolves/aigc"
Documentation = "https://github.com/nealsolves/aigc/blob/main/docs/USAGE.md"
"Issue Tracker" = "https://github.com/nealsolves/aigc/issues"
Changelog = "https://github.com/nealsolves/aigc/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "flake8>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["aigc", "aigc.*"]
